# WTA-Problem

./: README.md
Code/Data generation/: LinkCalculation.cpp  LinkCalculation.h
Code/Data_generation/: LinkCalculation.cpp  Makefile  main.cpp  main.h
Code/Outer_Approximation/: 1  385611.err  385611.out  Makefile  data.test  run.sh  script.sh  test_WTA10_exp.sh  test_WTA10_poly.sh  val
Code/Outer_Approximation/results/: wta100_0_1.out  wta100_0_10.out  wta100_0_2.out  wta100_0_3.out  wta100_0_4.out  wta100_0_5.out  wta100_0_6.out  wta100_0_7.out  wta100_0_8.out  wta100_0_9.out  wta100_1_1.out  wta100_1_10.out  wta100_1_2.out  wta100_1_3.out  wta100_1_4.out  wta100_1_5.out  wta100_1_6.out  wta100_1_7.out  wta100_1_8.out  wta100_1_9.out  wta10_0_1.out  wta10_0_10.out  wta10_0_2.out  wta10_0_3.out  wta10_0_4.out  wta10_0_5.out  wta10_0_6.out  wta10_0_7.out  wta10_0_8.out  wta10_0_9.out  wta10_1_1.out  wta10_1_10.out  wta10_1_2.out  wta10_1_3.out  wta10_1_4.out  wta10_1_5.out  wta10_1_6.out  wta10_1_7.out  wta10_1_8.out  wta10_1_9.out  (+200 more)
Code/Outer_Approximation/src/: benders.cpp  ilobenders.cpp  tags
Code/column_generation/: AlgoParameter.h  BranchAndCut.cpp  BranchAndCut.h  Makefile  Master.cpp  Master.h  Mcfdr.cpp  Mcfdr.h  Node.h  Path.h  Pricing.cpp  Pricing.h  Solution.h  print.h
Code/column_generation/MCDFR_cg/: AlgoParameter.h  BranchAndCut.cpp  BranchAndCut.h  CMakeLists.txt  Master.cpp  Master.h  Mcfdr.cpp  Mcfdr.h  Node.h  Path.h  Pricing.cpp  Pricing.h  Solution.h  clique_graph.cpp  clique_graph.h  mainMCFDR.cpp  test.sh
Code/column_generation/data/: demandfile  edgefile
Report/Proposal Report（开题报告）/: 0816参考文件.docx  开题 博弈论部分 20220808.docx  开题 博弈论部分.docx  开题_博弈论_王嘉妮(含背景).docx  朗月计划_作战体系最优资源配置：整数规划理论与算法_科学院.docx
Report/Research Report I/: WTA问题调研报告 - 副本.docx  WTA问题调研报告_完整版.docx  参考文献 草稿.doc  参考文献.docx  向李总汇报.docx  报告模板.docx
Slides/Optimization Seminar/: main.tex
Slides/Optimization Seminar/test/: test.aux  (+5 more)
src/: HelloWorld.cpp  Makefile
(+11 files in other folders)
